# 2026

./: main.py  pyproject.toml  quick_start.md
.github/workflows/: garmin-sync.yml
openspec/changes/add-garmin-sleep-tracking/specs/github-workflow-automation/: spec.md
openspec/changes/add-garmin-sleep-tracking/specs/issue-commenting/: spec.md
openspec/changes/archive/2026-01-08-add-garmin-sleep-tracking/: proposal.md  tasks.md
openspec/changes/archive/2026-01-08-add-garmin-sleep-tracking/specs/data-formatting/: spec.md
openspec/changes/archive/2026-01-08-add-garmin-sleep-tracking/specs/garmin-api-integration/: spec.md
openspec/changes/archive/2026-01-08-add-quick-note-script/: proposal.md  tasks.md
openspec/changes/archive/2026-01-08-add-quick-note-script/specs/quick-note-posting/: spec.md
openspec/specs/data-formatting/: spec.md
openspec/specs/garmin-api-integration/: spec.md
openspec/specs/github-workflow-automation/: spec.md
openspec/specs/issue-commenting/: spec.md
openspec/specs/quick-note-posting/: spec.md
scripts/: __init__.py  fetch_and_post.py  quick_note.py
src/: __init__.py  formatter.py  garmin_client.py  github_client.py
tests/: __init__.py  test_formatter.py  test_garmin_client.py  test_github_client.py
